tests/ui/foreign_text_type.stderr
Error [E0013]: the text type is called `String`, not `Text`
  --> tests/ui/foreign_text_type.lex:2:18
    |
  2 |     val message: Text = "hello";
    |                  ^^^^
 Why: `String` is the one and only text type
 Fix: replace `Text` with `String`
