tests/ui/foreign_text_type.lex
fn main() {
    val message: Text = "hello";
    print(message);
}
